Menambahkan code baru

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="my awesome site" />
+    <meta property="og:description" content="A description of my awesome site" />
+    <meta property="og:image" content="https://cdn.glitch.global/72b6dfb7-f56c-41f1-bf35-39f9164e8ffb/805362_1200.jpg?v=1697008631028" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
